# MDBenchmark

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.rst  DEVELOPER.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yml
.travis/: before_script.sh
benchmark/: __init__.py  analyze.py  cli.py  generate.py  start.py  submit.py  util.py
benchmark/templates/: draco  hydra
changelog/: 10.feature  104.feature  106.feature  107.feature  108.feature.1  108.feature.2  108.feature.3  108.feature.4  108.feature.5  110.misc  119.feature  124.bugfix.1  124.bugfix.2  125.feature  139.bugfix.rst  140.bugfix.rst  141.bugfix.rst  142.feature.rst  153.feature.rst  155.misc.rst  165.feature  168.feature  17.bugfix  181.feature  182.feature  184.bugfix  19.feature  192.bugfix  193.feature  195.bugfix  20.doc  29.feature  32.feature  34.bugfix  35.bugfix  36.doc  36.feature  42.feature  46.bugfix  46.misc  (+14 more)
docs/: Makefile  analyze.rst  conf.py  docs-requirements.txt  general.rst  generate.rst  index.rst  install.rst  jobtemplates.rst  make.bat  mdengine.rst  plot.rst  submit.rst  upgrading.rst
docs/_templates/: sidebarintro.html
mdbenchmark/: __init__.py  __main__.py  __version__.py  analyze.py  cli.py  config.py  console.py  generate.py  math.py  models.py  plot.py  submit.py  testing.py  util.py  utils.py  validate.py  version.py  versions.py
mdbenchmark/cli/: __init__.py  analyze.py  commands.py  generate.py  options.py  plot.py  submit.py  validators.py
mdbenchmark/ext/: __init__.py  cadishi.py  click_test.py
mdbenchmark/mdengines/: __init__.py  gromacs.py  lammps.py  namd.py  utils.py
mdbenchmark/migrations/: __init__.py  mds_to_dtr.py
mdbenchmark/templates/: cobra  draco  hydra
mdbenchmark/tests/: conftest.py  test_analyze.py  test_cli.py  test_console.py  test_fixtures.py  test_generate.py  test_math.py  test_models.py  test_plot.py  test_submit.py  test_testing.py  test_utils.py  test_validate.py  test_versions.py
mdbenchmark/tests/data/: analyze-files-gromacs-consolidated.csv  analyze-files-gromacs-prompt.csv  analyze-files-gromacs.csv  analyze-many-rows.csv  analyze_many_rows.out  empty_df.csv  runtime.csv  runtime2.csv  test.csv  testcsv.csv
mdbenchmark/tests/data/analyze-files-gromacs-one-unstarted/1/.datreant/: categories.json
mdbenchmark/tests/data/analyze-files-gromacs/1/: Sim.f2c3a7de-e167-419e-a8b6-2286f27f674c.json
mdbenchmark/tests/data/analyze-files-gromacs/2/: Sim.7c0db0de-70ce-4d55-b53b-d31c904f11cb.json
mdbenchmark/tests/data/analyze-files-gromacs/3/: Sim.b4ca19ea-a5ba-49be-8f27-aab19938d888.json
mdbenchmark/tests/data/analyze-files-gromacs/3/.datreant/: categories.json
mdbenchmark/tests/data/analyze-files-gromacs/5/: Sim.07ec0ddb-602d-4717-8464-22fc7dd50388.json
mdbenchmark/tests/data/analyze-files-gromacs/5/.datreant/: categories.json
mdbenchmark/tests/data/analyze-files-lammps/: .lmps_out.log.swp  2018-10-21_114048.csv
mdbenchmark/tests/data/analyze-files-lammps/1/: Sim.d9427a82-789d-4789-9186-83e390455fee.json  bench.job
mdbenchmark/tests/data/analyze-files-lammps/2/: Sim.8e48f7fe-5a83-405c-9a4a-0364436ed090.json  bench.job
mdbenchmark/tests/data/analyze-files-lammps/3/: Sim.3b64fda9-fdbe-4a94-b72e-2b97b787e1ab.json  bench.job  bulk.in
mdbenchmark/tests/data/analyze-files-lammps/4/: Sim.632d511b-03bb-4d1f-b462-d80fdf54d509.json  bench.job
mdbenchmark/tests/data/analyze-files-lammps/5/: Sim.3aebd58d-893c-4310-addc-60b9f1befa1b.json  bench.job
mdbenchmark/tests/data/analyze-files-namd/1/: Sim.59e83777-6ebb-493e-a478-7195a4261493.json  apoa1.namd  bench.job
mdbenchmark/tests/data/analyze-files-namd/1/.datreant/: categories.json
mdbenchmark/tests/data/analyze-files-namd/2/: Sim.6b71a7b2-6a3c-4a5a-a740-f4d2f361c337.json  apoa1.psf  bench.job  benchmark.out
mdbenchmark/tests/data/analyze-files-namd/2/.datreant/: categories.json
mdbenchmark/tests/data/analyze-files-w-errors/1/.datreant/: categories.json
mdbenchmark/tests/data/analyze-files-w-errors/2/.datreant/: categories.json
mdbenchmark/tests/data/analyze-files-w-errors/4/: Sim.059d59b5-c86c-4f50-9ff6-6a2061e26bf6.json
mdbenchmark/tests/data/analyze-files-w-errors/4/.datreant/: categories.json
mdbenchmark/tests/data/analyze-files-w-errors/6/: Sim.215509f9-67dd-43d6-b437-99423e68d2d2.json
mdbenchmark/tests/data/analyze-files-w-errors/6/.datreant/: categories.json
mdbenchmark/tests/data/analyze-files-w-errors/7/: Sim.6a47b788-410a-4b9d-9ab3-9492593b8cae.json
mdbenchmark/tests/data/analyze-files-w-errors/7/.datreant/: categories.json
mdbenchmark/tests/data/analyze-files-w-errors/8/: Sim.dc08e3e4-a081-4bef-9ca1-1a9080669655.json
mdbenchmark/tests/data/analyze-files-w-errors/8/.datreant/: categories.json
mdbenchmark/tests/data/gromacs/: test_prompt.csv
mdbenchmark/tests/mdengines/: test_gromacs.py  test_init.py  test_namd.py  test_utils.py
mdbenchmark/tests/migrations/: test_mds_to_dtr.py
template/: draco
