[tool.poetry]
name = "mdbenchmark"
version = "2.0.1-alpha"
license = "GPL-3.0"
authors = ["Max Linke", "Michael Gecht"]
description = "Benchmark molecular dynamics simulations"
keywords = ["benchmark", "molecular dynamics", "simulations", "gromacs", "namd"]
readme = "README.rst"
homepage = "https://mdbenchmark.org"
repository = "https://github.com/bio-phys/mdbenchmark"
documentation = "https://docs.mdbenchmark.org"

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
numpy = ">=1.15"
pandas = ">=0.24"
matplotlib = ">=2"
python-levenshtein = "^0.12.0"
jinja2 = "^2.10"
datreant = "^1.0"
click = ">=6.7"
xdg = { version = "^1" }

[tool.poetry.dev-dependencies]
ipython = ">=5"
pytest = ">=4"
pytest-cov = "^2.8"
pytest-cache = "^1.0"
pytest-pep8 = "^1.0"
pytest-sugar = "^0.9.2"
isort = "^4.3"
flake8 = "^3.7"
pylint = ">=1"
towncrier = "^19.2"
black = {version = "^19.10b0", python = "^3.6", allows-prereleases = true}

[tool.poetry.scripts]
mdbenchmark = "mdbenchmark:cli"

[tool.towncrier]
package = "mdbenchmark"
filename = "CHANGELOG.rst"
directory = "changelog/"
title_format = "{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/bio-phys/MDBenchmark/issues/{issue}>`_"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
