[tool.poetry]
name = "mdbenchmark"
version = "2.0.1"
license = "GPL-3.0"
authors = ["Max Linke", "Michael Gecht", "Marc Siggel"]
description = "Quickly generate, start and analyze benchmarks for your molecular dynamics simulations."
keywords = ["benchmark", "molecular dynamics", "simulations", "gromacs", "namd"]
readme = "README.rst"
homepage = "https://mdbenchmark.org"
repository = "https://github.com/bio-phys/mdbenchmark"
documentation = "https://docs.mdbenchmark.org"

include = ["README.rst", "LICENSE", "AUTHORS", "CHANGELOG.rst", "docs/_static/runtimes.png", "pyproject.toml", "templates/*"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: System :: Benchmark",
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
numpy = ">=1.15"
pandas = ">=0.24"
matplotlib = ">=2"
python-levenshtein = "^0.12.0"
jinja2 = "^2.10"
datreant = "^1.0"
click = ">=6.7"
xdg = { version = "^1" }
tabulate = "^0.8.5"

# Optional dependencies to build the documentation using Sphinx
Sphinx = { version = "^1", optional = true }
sphinx-autobuild = { version = "^0.7.1", optional = true }
sphinx-click = { version = "^2.3", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-autobuild", "sphinx-click"]

[tool.poetry.dev-dependencies]
ipython = ">=5"
pytest = ">=4"
pytest-cov = "^2.8"
pytest-cache = "^1.0"
pytest-pep8 = "^1.0"
pytest-sugar = "^0.9.2"
black = {version = "^19.10b0", python = "^3.6", allow-prereleases = true}
flake8 = "^3.7"
isort = "^4.3"
pylint = ">=1"
restructuredtext_lint = "^1.3"
towncrier = "^19.2"

[tool.poetry.scripts]
mdbenchmark = "mdbenchmark:cli"

[tool.towncrier]
package = "mdbenchmark"
filename = "CHANGELOG.rst"
directory = "changelog/"
title_format = "{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/bio-phys/MDBenchmark/issues/{issue}>`_"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
