[tool.poetry]
name = "mdbenchmark"
version = "3.0.1"
license = "GPL-3.0"
authors = ["Max Linke", "Michael Gecht", "Marc Siggel", "Sebastian Kehl"]
description = "Quickly generate, start and analyze benchmarks for your molecular dynamics simulations."
keywords = ["benchmark", "molecular dynamics", "simulations", "gromacs", "namd"]
readme = "README.rst"
homepage = "https://mdbenchmark.org"
repository = "https://github.com/bio-phys/mdbenchmark"
documentation = "https://docs.mdbenchmark.org"

include = ["README.rst", "LICENSE", "AUTHORS", "CHANGELOG.rst", "docs/_static/runtimes.png", "pyproject.toml", "templates/*"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: System :: Benchmark",
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = ">=1.15"
pandas = ">=0.24"
matplotlib = ">=2"
jinja2 = ">=2.10"
datreant = ">=1.0"
click = ">=8"
xdg = ">=1"
tabulate = ">=0.8.5"

# Optional dependencies to build the documentation using Sphinx
Sphinx = { version = "5.3.0", optional = true } # later versions drop python 3.7
sphinx-autobuild = { version = ">=0.7.1", optional = true }
sphinx-click = { version = ">=2.3", optional = true }
psutil = ">=5.7.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-autobuild", "sphinx-click"]

[tool.poetry.dev-dependencies]
pytest = ">=4.1"
pytest-cov = ">=2.8"
pytest-cache = ">=1.0"
pytest-pep8 = ">=1.0"
pytest-sugar = ">=0.9.2"
black = ">=22.12"
flake8 = ">=3.8"
isort = ">=5"
restructuredtext_lint = ">=1.3"
towncrier = ">=19.2"

[tool.poetry.scripts]
mdbenchmark = "mdbenchmark:cli"

[tool.towncrier]
package = "mdbenchmark"
filename = "CHANGELOG.rst"
directory = "changelog/"
title_format = "{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/bio-phys/MDBenchmark/issues/{issue}>`_"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
